--- a/rbss/tools/actorEditor/view_templates/css/actor_viewer.css
+++ b/rbss/tools/actorEditor/view_templates/css/actor_viewer.css
@@ -1,11 +1,11 @@
 .row_one {
     margin: 40px 0 20px 0;
-    min-height: 300px;
+    /* min-height: 300px; */
 }
 
 .photo_col {
     display: inline-block;
-    width: 20%;
+    /* width: 20%; */
     border: dotted #333 1px;
     position: relative;
 }
@@ -18,14 +18,14 @@
 .photo_col .photo_box {
     border: 2px solid #333;
     background-color: #666;
-    min-height: 200px;
-    max-width: 80%;
+    /* min-height: 200px; */
+    /* max-width: 80%; */
     margin: 20px auto 0;
 }
 
 .tab_col {
     display: inline-block;
-    width: 79%;
+    /* width: 79%; */
     border: dotted #333 1px;
     position: relative;
 }
@@ -36,7 +36,7 @@
 }
 
 .tabs_content_row {
-    min-height: 200px;
+    /* min-height: 200px; */
     border: dotted #333 1px;
     
 }
