--- a/js/zui/view_templates/ejs/tab_container.ejs
+++ b/js/zui/view_templates/ejs/tab_container.ejs
@@ -6,9 +6,12 @@
                 <span id="<%= key %>" 
                     title="<%= tabs[key].hover %>" 
                     class="zui-tab <%= tabs[key].disabled === true ? 'disabled' : '' %>">
+                        <% if (typeof tabs[key].glyph_code !== 'undefined') { %>  
+                            <i class="fa fa-<%= tabs[key].glyph_code %>">&nbsp;</i>
+                        <% } %>
                         <%= tabs[key].label %>
                 </span>
-            <% };%>
+            <% } %>
         <% }%>
     </div>
     <div class="tabs_content_row"></div>
