--- a/js/zui/view_templates/ejs/grid_item.ejs
+++ b/js/zui/view_templates/ejs/grid_item.ejs
@@ -1,5 +1,6 @@
 <% var index = typeof index !== 'undefined' ? index : 0 %>
 <% var label_value = typeof label !== 'undefined' ? label : 'Item: ' + index %>
+<% var item_value = typeof value !== 'undefined' ? value : label_value %>
 <% var label_prefix_value = typeof prefix !== 'undefined' ? prefix : '' %>
 <% var hover_value = typeof hover_text !== 'undefined' ? hover_text : '' %>
 <% var classes_value = Array.isArray(classes) ? classes.concat('list-item').join(' ') : 'list-item' %>
@@ -12,6 +13,9 @@
 <% }%>
 <% if (classes_value) { %>  
     class="<%= classes_value %>"
+<% } %>
+<% if (item_value) { %>  
+    data-value="<%= item_value %>"
 <% } %>
 >
     <% if (label_prefix_value) { %>  
