--- a/js/zui/view_templates/ejs/dialog_input.ejs
+++ b/js/zui/view_templates/ejs/dialog_input.ejs
@@ -1,35 +1,23 @@
 <% var query_value = typeof query !== 'undefined' ? query : 'Do you want to continue?' %>
-
-<% var subtype_value = typeof subtype !== 'undefined' ? subtype : 'text' %>
+<% var input_value = typeof input !== 'undefined' ? input : 'text' %>
 <% var defaultValue_value = typeof defaultValue !== 'undefined' ? defaultValue : '' %>
 <% var placeholder_value = typeof placeholder !== 'undefined' ? placeholder : 'Text here' %>
 <% var hoverText_value = typeof hoverText !== 'undefined' ? hoverText : '' %>
 
-<% var confirmLabel = Array.isArray(buttonLabels) && buttonLabels.length > 0 ? buttonLabels[0] : 'Confirm' %>
-<% var cancelLabel = Array.isArray(buttonLabels) && buttonLabels.length > 0 ? buttonLabels[1] : 'Cancel' %>
-
-<div class="edge">
-    <div class="titleBar">
-        <span class="title">Input</span>
-        <span class="buttons">
-            <button class="dismissPanel" title="Escape">X</button>
-        </span>
-    </div>
-    <div class="content"> 
-        <h3><%= query_value %></h3>
-        <div class="field-box">
-            <input class="dialog-input" 
-                type="<%= subtype_value %>" 
-                value="<%= defaultValue_value %>" 
-                placeholder="<%= placeholder_value %>" 
-                title="<%= hoverText_value %>" 
-            />
-        </div>
-    </div>
-    <div class="footer">
-        <span class="buttons">
-            <button class="panelResult"><%= buttonLabels[0] %></button>
-            <button class="dismissPanel"><%= buttonLabels[1] %></button>
-        </span>
-    </div>
+<h3><%= query_value %></h3>
+<div class="field-box">
+    <% if(input_value === "textarea") {%>
+        <textarea class="dialog-input"
+            value="<%= defaultValue_value %>" 
+            placeholder="<%= placeholder_value %>" 
+            title="<%= hoverText_value %>" 
+        ></textarea>
+    <% } else { %>
+        <input class="dialog-input"
+            type="<%= input_value %>" 
+            value="<%= defaultValue_value %>" 
+            placeholder="<%= placeholder_value %>" 
+            title="<%= hoverText_value %>" 
+        />
+    <% } %>
 </div>
