--- a/js/zui/view_templates/ejs/dialog_loading.ejs
+++ b/js/zui/view_templates/ejs/dialog_loading.ejs
@@ -1,7 +1,7 @@
 <% var label_value = typeof label !== 'undefined' ? label : 'Loading...' %>
 
 <div class="zui-dialog-body">
-    <div class="zui-dialog-loading-panel">
+    <div class="zui-dialog-panel">
         <div class="loading-content">
             <i class="fa fa-cog fa-spin"></i>        
             <span class="buttons">&nbsp;<%= label_value %></span>
