multi-layer dialogs and other style enhancements added
beginning the work on getting the actors and framework components organized and ready to instantiate

--- a/js/zui/styles/zui.css
+++ b/js/zui/styles/zui.css
@@ -114,188 +114,11 @@ body {
     position: fixed !important;
 }
 
+.hidden,
 .zui-noDisplay {
     display: none !important;
 }
 
 .bgClear {
     background-color: transparent !important;
-}
-
-#dialogLayer {
-    position: fixed;
-    top:0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 9999999;
-    background-color: transparent;
-}
-
-
-#dialogLayer .overlay {
-    background-color: rgba(55,55,55,0.85);
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-}
-
-#dialogLayer .dialogContainer {
-    position: relative;
-    height: 100%;
-    width: 100%;
-}
-
-.zui-dialog {
-    width: 50%;
-    height: 50%;
-    margin: 100px auto 0;
-    /* background-color: #333; */
-    cursor:crosshair;
-}
-
-.zui-dialog.active{
-    background-color: #f00;
-}
-
-.zui-dialog > .edge {
-    background-color:#c1c1c1;
-    position: absolute;
-    top: 2px;
-    bottom:2px;
-    left:2px;
-    right: 2px;
-    cursor: initial;
-}
-
-.zui-dialog .titleBar {
-    padding: 8px;
-    background-color: #999;
-    cursor: move;
-    overflow: auto;
-    position: absolute;
-    top:0;
-    left: 0;
-    right: 0;
-    z-index: 5;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currntly */
-}
-.zui-dialog .titleBar .buttons {
-    float: right;
-}
-.zui-dialog .footer {
-    background-color: #999;
-    position: absolute;
-    bottom:0;
-    left: 0;
-    right: 0;
-    z-index: 3;
-    padding: 8px;
-}
-.zui-dialog .footer .buttons {
-    float: right;
-    overflow: auto;
-}
-
-.zui-dialog .content {
-    position: absolute;
-    margin: 45px 0;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    overflow-y: auto;
-    z-index: 2;
-    padding: 10px;
-}
-
-.zui-dialog .content:after {
-    content: "";
-    display: block;
-    height: 50px;
-    width: 100%;
-}
-
-
-.zui-dialog.zui-drag {
-    position: absolute;
-    margin: 0;
-}
-
-.zui-dialog .resize-N {
-    position: absolute;
-    cursor: ns-resize;
-    top: 0;
-    left: 10%;
-    right: 10%;
-    height: 10%;
-}
-.zui-dialog .resize-NW {
-    position: absolute;
-    cursor: nw-resize;
-    top: 0;
-    left: 0;
-    width: 10%;
-    height: 10%;
-}
-
-.zui-dialog .resize-NE {
-    position: absolute;
-    cursor: ne-resize;
-    top: 0;
-    right: 0;
-    width: 10%;
-    height: 10%;
-}			
-
-.zui-dialog .resize-S {
-    position: absolute;
-    cursor: ns-resize;
-    bottom: 0;
-    left: 10%;
-    right: 10%;
-    height: 10%;
-}			
-
-.zui-dialog .resize-SE {
-    position: absolute;
-    cursor: se-resize;
-    bottom: 0;
-    right: 0;
-    width: 10%;
-    height: 10%;
-}			
-
-.zui-dialog .resize-SW {
-    position: absolute;
-    cursor: sw-resize;
-    bottom: 0;
-    left: 0;
-    width: 10%;
-    height: 10%;
-}			
-
-.zui-dialog .resize-E {
-    position: absolute;
-    cursor: ew-resize;
-    right: 0;
-    top: 10%;
-    bottom: 10%;
-    width: 10%;
-}			
-
-.zui-dialog .resize-W {
-    position: absolute;
-    cursor: ew-resize;
-    left: 0;
-    top: 10%;
-    bottom: 10%;
-    width: 10%;
 }
