--- a/rbss/tools/actorEditor/view_templates/css/actor_editor.css
+++ b/rbss/tools/actorEditor/view_templates/css/actor_editor.css
@@ -33,3 +33,11 @@
 .actor_toolbar {
     text-align: right;
 }
+
+.actor_json {
+    background-color: #d1d1d1;
+    border: 1px solid #666;
+    overflow: auto;
+    padding: 10px;
+    font-family: monospace;
+}
