--- a/rbss/tools/actorEditor/view_templates/ejs/basic_info.ejs
+++ b/rbss/tools/actorEditor/view_templates/ejs/basic_info.ejs
@@ -47,7 +47,7 @@
     </div>
     <div class="g-row g-v-24">
         <div>
-            <label for="actor_profession">Profession</label>
+            <label for="actor_profession">Archetype</label>
             <input id="actor_profession" type="text" name="actor_profession" value="<%= get('demographic').archetype.get('name') %>" title="This glyph will provide benifits to certain in-game situations">
             <button><i class="fa fa-random" title="Randomize"></i></button>
         </div>
